added script block in layout

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -7,7 +7,7 @@
     <div>
         <div>
             <h2>New Post</h2>
-            <form id="compose_form">
+            <form id="compose-form">
                 <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
                 <input type="submit" class="btn btn-primary"/>
             </form>
