--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -15,35 +15,7 @@
             </form>
         </div>
         {% endif %}
-        <div id="posts-container">
-            {% for post in page_obj %}
-            <div style="border:black 1px solid">
-                <a href="{% url 'profile' post.user_id %}" class="h4">{{post.user}}</a>
-                <button class="btn btn-secondary">Edit post</button>
-                <div>
-                    {{post.body}}
-                    <hr>
-                    {{post.timestamp}}
-                </div>
-                <div>
-                    <button>❤Like</button>
-                </div>
-            </div> 
-            {% endfor %}
-
-
-        </div>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-                {% endif %}
-                {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-                {% endif %}
-
-            </ul>
-        </nav>
+        {% include "network/posts.html" with page_obj=page_obj %}
     </div>
 {% endblock %}
 
